--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,7 +15,7 @@ builds:
     env:
       - CGO_ENABLED=1
     ldflags:
-      - -s -w -X github.com/iotaledger/hornet/plugins/cli.AppVersion={{.Version}}
+      - -s -w -X https://github.com/Ariwonto/aingle-alpha/plugins/cli.AppVersion={{.Version}}
     flags:
       - -tags=pow_avx
     main: main.go
@@ -30,7 +30,7 @@ builds:
       - CGO_ENABLED=1
       - CC=aarch64-linux-musl-gcc
     ldflags:
-      - -s -w -X github.com/iotaledger/hornet/plugins/cli.AppVersion={{.Version}}
+      - -s -w -X https://github.com/Ariwonto/aingle-alpha/plugins/cli.AppVersion={{.Version}}
       - -w -extldflags "-static"
     flags:
       - -tags=pow_arm_c128
@@ -47,7 +47,7 @@ builds:
       - CC=x86_64-w64-mingw32-gcc
       - CXX=x86_64-w64-mingw32-g++
     ldflags:
-      - -s -w -X github.com/iotaledger/hornet/plugins/cli.AppVersion={{.Version}}
+      - -s -w -X https://github.com/Ariwonto/aingle-alpha/plugins/cli.AppVersion={{.Version}}
     flags:
       - -tags=pow_avx
     main: main.go
@@ -61,7 +61,7 @@ builds:
     env:
       - CGO_ENABLED=0
     ldflags:
-      - -s -w -X github.com/iotaledger/hornet/plugins/cli.AppVersion={{.Version}}
+      - -s -w -X https://github.com/Ariwonto/aingle-alpha/plugins/cli.AppVersion={{.Version}}
     main: main.go
     goos:
       - darwin
@@ -100,7 +100,7 @@ nfpms:
     vendor: GoReleaser
     license: Apache 2.0
     maintainer: iotaledger
-    homepage: https://github.com/iotaledger/hornet
+    homepage: https://https://github.com/Ariwonto/aingle-alpha
     description: HORNET is a powerful IOTA fullnode software.
     formats:
       - deb
