--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -14,22 +14,22 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build HORNET Docker image
-        run: docker build . -f docker/Dockerfile.dev -t iotaledger/hornet:$(git rev-parse --short "$GITHUB_SHA") 
+        run: docker build . -f docker/Dockerfile.dev -t Ariwonto/aingle-alpha:$(git rev-parse --short "$GITHUB_SHA")
 
       - name: Test HORNET Docker image
-        run: docker run --rm --name hornet iotaledger/hornet:$(git rev-parse --short "$GITHUB_SHA") --version 2>/dev/null | grep -q "HORNET"
+        run: docker run --rm --name hornet Ariwonto/aingle-alpha:$(git rev-parse --short "$GITHUB_SHA") --version 2>/dev/null | grep -q "HORNET"
 
       - name: Docker login
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker push
-        run: docker push iotaledger/hornet:$(git rev-parse --short "$GITHUB_SHA")
+        run: docker push Ariwonto/aingle-alpha:$(git rev-parse --short "$GITHUB_SHA")
 
       - name: Docker push - Release
         run: |
           export RELEASE_VERSION=${GITHUB_REF#refs/*/}
-          docker tag iotaledger/hornet:$(git rev-parse --short "$GITHUB_SHA") iotaledger/hornet:$RELEASE_VERSION
-          docker tag iotaledger/hornet:$(git rev-parse --short "$GITHUB_SHA") iotaledger/hornet:latest
-          docker push iotaledger/hornet:$RELEASE_VERSION
-          docker push iotaledger/hornet:latest
+          docker tag Ariwonto/aingle-alpha:$(git rev-parse --short "$GITHUB_SHA") Ariwonto/aingle-alpha:$RELEASE_VERSION
+          docker tag Ariwonto/aingle-alpha:$(git rev-parse --short "$GITHUB_SHA") Ariwonto/aingle-alpha:latest
+          docker push Ariwonto/aingle-alpha:$RELEASE_VERSION
+          docker push Ariwonto/aingle-alpha:latest
         if: startsWith(github.ref, 'refs/tags/v')        
