--- a/docker/Dockerfile.goreleaser
+++ b/docker/Dockerfile.goreleaser
@@ -2,7 +2,7 @@ FROM alpine:latest
 WORKDIR /app
 
 LABEL org.label-schema.description="HORNET - The IOTA community node"
-LABEL org.label-schema.name="iotaledger/hornet"
+LABEL org.label-schema.name="Ariwonto/aingle-alpha"
 LABEL org.label-schema.schema-version="1.0"
 LABEL org.label-schema.vcs-url="https://https://github.com/Ariwonto/aingle-alpha"
 LABEL org.label-schema.usage="https://https://github.com/Ariwonto/aingle-alpha/blob/master/DOCKER.md"
